# Payment-Project-Application

./: CMakeLists.txt
app/: app.c
card/: card.c
server/: server.c  server.h
terminal/: terminal.c  terminal.h
